--- a/ABIMSIM/MainMenuView.xib
+++ b/ABIMSIM/MainMenuView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -148,6 +148,10 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hQe-4c-cCB" userLabel="SettingsContainerView">
                     <rect key="frame" x="0.0" y="144" width="320" height="424"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="Rl8-mc-kGb"/>
+                        <constraint firstAttribute="height" constant="424" id="k1I-ld-ldF"/>
+                    </constraints>
                 </view>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bim-RU-DVf" userLabel="HamburgerButton">
                     <rect key="frame" x="10" y="496" width="62" height="62"/>
@@ -165,10 +169,8 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="hQe-4c-cCB" secondAttribute="bottom" id="8U8-xP-R9j"/>
                 <constraint firstItem="Bim-RU-DVf" firstAttribute="leading" secondItem="tyn-rH-lKS" secondAttribute="leading" constant="10" id="AyD-6L-7Da"/>
                 <constraint firstAttribute="centerY" secondItem="lUf-dq-MXE" secondAttribute="centerY" constant="-6.5" id="MNH-nk-X4k"/>
-                <constraint firstAttribute="trailing" secondItem="hQe-4c-cCB" secondAttribute="trailing" id="PWV-uG-ARh"/>
                 <constraint firstItem="hQe-4c-cCB" firstAttribute="leading" secondItem="tyn-rH-lKS" secondAttribute="leading" id="WvH-WP-NEb"/>
                 <constraint firstAttribute="trailing" secondItem="Yua-2N-2Jd" secondAttribute="trailing" id="bGz-4D-Qlh"/>
                 <constraint firstAttribute="centerX" secondItem="lUf-dq-MXE" secondAttribute="centerX" constant="-6.5" id="dG4-LN-yWA"/>
@@ -193,7 +195,6 @@
                 <outlet property="playRing2" destination="LW1-W8-aRi" id="oFk-q8-zrE"/>
                 <outlet property="playRing3" destination="9FG-Ig-BC2" id="6HD-bV-Iya"/>
                 <outlet property="settingsContainerTopAlignmentConstraint" destination="fEC-lG-GhE" id="37m-Rx-Dgl"/>
-                <outlet property="settingsContainerTrailingConstraint" destination="PWV-uG-ARh" id="XAS-on-zTW"/>
                 <outlet property="settingsContainerView" destination="hQe-4c-cCB" id="sMQ-Mi-yut"/>
                 <outlet property="upgradeButton" destination="6sh-oa-F4s" id="5gF-9N-Y6r"/>
                 <outlet property="upgradeRing0" destination="iZQ-5l-w7z" id="DaA-BL-ZI7"/>
